Test/Fixture/BlockMigration/InvalidData/BlockMigrationInvalidDataRolesRoomFixture.php
<?php
/**
 * BlockMigrationInvalidDataRolesRoomFixture
 *
 * @copyright Copyright 2014, NetCommons Project
 * @author Kohei Teraguchi <kteraguchi@commonsnet.org>
 * @link http://www.netcommons.org NetCommons Project
 * @license http://www.netcommons.org/license.txt NetCommons License
 */

App::uses('BlockMigrationNoDataRolesRoomFixture', 'Calendars.Test/Fixture/BlockMigration/NoData');

/**
 * BlockMigrationInvalidDataRolesRoomFixture
 *
 */
class BlockMigrationInvalidDataRolesRoomFixture extends BlockMigrationNoDataRolesRoomFixture {

/**
 * Fixture records to be inserted.
 *
 * @var array
 */
 	//public $records = [];

}
